samples/_failures_safe/1761043304_8d78cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d36851a.c: In function ‘main’:
./samples/SAFE/__tmp_7d36851a.c:165: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_7d36851a.c:164:5: error: expected declaration or statement at end of input
  164 |     if
      |     ^~
